# token-auth-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
tests/: test_utils.py
token_auth_cli/: cli.py  commands.py  config.py  utils.py
