[tool.poetry]
name = "token-auth-cli"
version = "0.1.0"
description = ""
authors = ["0djentd"]

[tool.poetry.scripts]
token-auth-cli = "token_auth_cli.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
aiohttp = "^3.8.1"
toml = "^0.10.2"
pydantic = "^1.9.1"
rich = "^12.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
